--- a/escrito/tesis.tex
+++ b/escrito/tesis.tex
@@ -88,7 +88,7 @@
 \pagenumbering{arabic}
 
 % Información del documento
-\title{\textbf{Desarrollo de un sistema eficiente para el procesamiento de gotas de lluvia cargadas eléctricamente}}
+\title{\textbf{Desarrollo de un sistema eficiente para el procesamiento de datos experimentales de la carga eléctrica de gotas de lluvia}}
 \author{Estudiante de Licenciatura en Ciencias de la Computación}
 \date{\today}
 
@@ -103,14 +103,14 @@
 \maketitle
 
 \begin{abstract}
-    El análisis de gotas cargadas eléctricamente en tormentas requiere procesar grandes volúmenes de datos, pero el código existente presenta limitaciones de diseño y rendimiento. Se desarrolló un sistema modular y optimizado que implementa algoritmos eficientes como ventanas deslizantes y estructuras de datos optimizadas. El sistema de automatización permite ejecutar toda la cadena de análisis con un único comando. Los resultados muestran una reducción del tiempo de procesamiento de 6 horas a 15 minutos para 100 millones de datos, manteniendo la misma precisión en la detección de gotas.
+    El análisis de mediciones de gotas de lluvia cargadas eléctricamente en tormentas requiere procesar grandes volúmenes de datos, pero el código existente presenta limitaciones de diseño y rendimiento. Se desarrolló un sistema modular y optimizado que implementa algoritmos eficientes como ventanas deslizantes y estructuras de datos optimizadas. El sistema de automatización permite ejecutar toda la cadena de análisis con un único comando. Los resultados muestran una reducción del tiempo de procesamiento de 6 horas a 15 minutos para 100 millones de datos, manteniendo la misma precisión en la detección de gotas.
 
     \textbf{Palabras clave:} gotas cargadas eléctricamente, procesamiento de señales, optimización de algoritmos, C++, Python
 \end{abstract}
 
 \selectlanguage{english}
 \begin{abstract}
-    The analysis of electrically charged droplets in storms requires processing large data volumes, but existing code has design and performance limitations. A modular and optimized system was developed implementing efficient algorithms like sliding windows and optimized data structures. The automation system allows executing the entire analysis chain with a single command. Results show processing time reduction from 6 hours to 15 minutes for 100 million data points, maintaining the same droplet detection accuracy.
+    The analysis of measurements of electrically charged raindrops in storms requires processing large data volumes, but existing code has design and performance limitations. A modular and optimized system was developed implementing efficient algorithms like sliding windows and optimized data structures. The automation system allows executing the entire analysis chain with a single command. Results show processing time reduction from 6 hours to 15 minutes for 100 million data points, maintaining the same droplet detection accuracy.
 
     \textbf{Keywords:} electrically charged droplets, signal processing, algorithm optimization, C++, Python
 \end{abstract}
@@ -254,13 +254,13 @@ Las clases de complejidad más relevantes para este trabajo son:
 \begin{itemize}
     \item \textbf{$O(1)$ - Constante:} El tiempo de ejecución es independiente del tamaño de la entrada. Ejemplo: acceder a un elemento de un arreglo por índice.
     
-    \item \textbf{$O(\log n)$ - Logarítmica:} El tiempo crece logarítmicamente con el tamaño de la entrada. Ejemplo: búsqueda binaria en un arreglo ordenado.
+    \item \textbf{$O(\log n)$ - Logarítmica:} El tiempo crece logarítmicamente con el tamaño de la entrada. Ejemplo: búsqueda binaria en un arreglo ordenado. La búsqueda binaria divide repetidamente el espacio de búsqueda por la mitad, eliminando la mitad de los elementos en cada iteración.
     
     \item \textbf{$O(n)$ - Lineal:} El tiempo es proporcional al tamaño de la entrada. Ejemplo: recorrer todos los elementos de un arreglo.
     
-    \item \textbf{$O(n \log n)$ - Lineal logarítmica:} El tiempo crece como $n$ multiplicado por $\log n$. Ejemplo: algoritmos de ordenamiento eficientes como merge sort.
+    \item \textbf{$O(n \log n)$ - Lineal logarítmica:} El tiempo crece como $n$ multiplicado por $\log n$. Ejemplo: algoritmos de ordenamiento eficientes como merge sort. Merge sort divide recursivamente el arreglo en mitades, ordena cada mitad y luego combina los resultados ordenados.
     
-    \item \textbf{$O(n^2)$ - Cuadrática:} El tiempo es proporcional al cuadrado del tamaño de la entrada. Ejemplo: algoritmos de ordenamiento simples como bubble sort.
+    \item \textbf{$O(n^2)$ - Cuadrática:} El tiempo es proporcional al cuadrado del tamaño de la entrada. Ejemplo: algoritmos de ordenamiento simples como bubble sort. Bubble sort compara pares adyacentes de elementos y los intercambia si están en orden incorrecto, repitiendo este proceso hasta que no se requieran más intercambios.
 \end{itemize}
 
 En la figura \ref{fig:complejidades_algoritmicas} se puede observar un gráfico comparativo de numero de operaciones vs tamaño de datos para diferentes complejidades algorítmicas
@@ -272,16 +272,20 @@ En la figura \ref{fig:complejidades_algoritmicas} se puede observar un gráfico 
     \label{fig:complejidades_algoritmicas}
 \end{figure}
 
+\subsubsection{Importancia de la constante en la complejidad}
+
+Aunque por definición sepamos que $O(10n) = O(n)$, es importante entender que un algoritmo que haga 10 veces más operaciones que otro, requerirá obviamente 10 veces más cómputo. Por esta razón, es importante no solo prestar atención a la complejidad de los algoritmos, sino también a la "constante" que afecta a esta, ya que este factor puede ser determinante en la práctica.
+
 \subsubsection{Importancia en el contexto de este trabajo}
 
-En el procesamiento de señales, donde se manejan millones de puntos de datos, la diferencia entre algoritmos de complejidad $O(n)$ y $O(n^2)$ puede resultar en diferencias de horas en el tiempo de procesamiento. Por ejemplo, para procesar 100 millones de puntos:
+En el procesamiento de señales, donde se manejan millones de puntos de datos, la diferencia entre algoritmos de complejidad $O(n)$ y $O(n^2)$ puede resultar en diferencias de horas en el tiempo de procesamiento. Por ejemplo, para procesar 100 millones de puntos (teniendo en cuenta que un procesador realizar aproximadamente $10^8$ operaciones por segundo):
 
 \begin{itemize}
     \item Un algoritmo $O(n)$ podría completarse en segundos
     \item Un algoritmo $O(n^2)$ podría requerir días o semanas
 \end{itemize}
 
-Por esta razón, la optimización de la complejidad computacional es crucial para hacer viable el análisis de grandes volúmenes de datos meteorológicos en tiempo razonable.
+Por esta razón, la optimización de la complejidad computacional, asi mismo como la optimizacion de la constante es crucial para hacer viable el análisis de grandes volúmenes de datos meteorológicos en tiempo razonable.
 
 \section{Análisis del código existente}
 \lhead{}
@@ -574,7 +578,7 @@ Si analizamos la implementación \nameref{lst:codigo_promedio_movil}, vemos que 
 
 \subsection{Estructura de datos MinQueue}
 
-La estructura de datos \textit{MinQueue} es una cola que mantiene el elemento mínimo en tiempo constante $O(1)$ para todas las operaciones básicas. Esta estructura es fundamental para resolver eficientemente problemas de ventana deslizante donde necesitamos encontrar el mínimo (o máximo) en una ventana de tamaño fijo que se mueve a través de una secuencia de datos.
+Una cola (queue) es una estructura de datos que sigue el principio FIFO (First In, First Out), donde los elementos se agregan por un extremo y se eliminan por el otro. La \textit{MinQueue} extiende este concepto manteniendo una cola auxiliar ordenada para acceder al elemento mínimo en tiempo constante. En lugar de buscar el mínimo en toda la ventana cada vez (operación O(n)), mantiene una estructura auxiliar que permite obtener el mínimo en O(1).
 
 \subsubsection{Principio de funcionamiento}
 
