chore: mas escrito

--- a/escrito/bibliografia.bib
+++ b/escrito/bibliografia.bib
@@ -25,4 +25,12 @@
       pages   = {283--295},
       doi     = {10.20937/ATM.53446}
     }
+    @book{cormen2009introduction,
+      title     = {Introduction to Algorithms},
+      author    = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+      year      = {2009},
+      publisher = {MIT Press},
+      edition   = {3rd},
+      isbn      = {9780262033848}
+    }
     
