--- a/escrito/tesis.tex
+++ b/escrito/tesis.tex
@@ -38,7 +38,7 @@
 
 % Configuración de listings para código
 \lstset{
-    basicstyle=\ttfamily\small,
+    basicstyle=\ttfamily\footnotesize,
     breaklines=true,
     frame=single,
     numbers=left,
@@ -49,7 +49,10 @@
     backgroundcolor=\color{gray!10},
     extendedchars=true,
     inputencoding=utf8,
-    literate={ñ}{{\~n}}1 {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1 {ü}{{\"u}}1
+    literate={ñ}{{\~n}}1 {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1 {ü}{{\"u}}1,
+    lineskip=-0.2pt,
+    aboveskip=0pt,
+    belowskip=0pt
 }
 
 \begin{filecontents*}{bibliografia.bib}
@@ -239,7 +242,7 @@ La estructura de esta tesis está organizada de manera que primero se establece 
 \lhead{}
 \rhead{Análisis de Complejidad Computacional}
 
-Para evaluar y comparar la eficiencia de los algoritmos utilizados en este trabajo, es fundamental entender cómo se mide el rendimiento computacional. La notación Big-O es una herramienta matemática que permite describir el comportamiento asintótico de un algoritmo en términos de tiempo de ejecución o uso de memoria, en función del tamaño de la entrada.
+Para evaluar y comparar la eficiencia de los algoritmos utilizados en este trabajo, es fundamental entender cómo se mide el rendimiento computacional. La notación Big-O es una herramienta matemática que permite describir el comportamiento asintótico de un algoritmo en términos de tiempo de ejecución o uso de memoria, en función del tamaño de la entrada. \cite{cormen2009introduction}
 
 \subsubsection{Notación Big-O}
 
@@ -263,18 +266,18 @@ Las clases de complejidad más relevantes para este trabajo son:
     \item \textbf{$O(n^2)$ - Cuadrática:} El tiempo es proporcional al cuadrado del tamaño de la entrada. Ejemplo: algoritmos de ordenamiento simples como bubble sort. Bubble sort compara pares adyacentes de elementos y los intercambia si están en orden incorrecto, repitiendo este proceso hasta que no se requieran más intercambios.
 \end{itemize}
 
-En la figura \ref{fig:complejidades_algoritmicas} se puede observar un gráfico comparativo de numero de operaciones vs tamaño de datos para diferentes complejidades algorítmicas
+En la figura \ref{fig:complejidades_algoritmicas} se puede observar un gráfico comparativo de numero de operaciones versus tamaño de datos para diferentes complejidades algorítmicas
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{figures/complejidades_algoritmicas.png}
-    \caption{Gráfico comparativo de numero de operaciones vs tamaño de datos para diferentes complejidades algorítmicas, en escala logarítmica. }
+    \caption{Gráfico comparativo de numero de operaciones versus tamaño de datos para diferentes complejidades algorítmicas, en escala logarítmica. }
     \label{fig:complejidades_algoritmicas}
 \end{figure}
 
 \subsubsection{Importancia de la constante en la complejidad}
 
-Aunque por definición sepamos que $O(10n) = O(n)$, es importante entender que un algoritmo que haga 10 veces más operaciones que otro, requerirá obviamente 10 veces más cómputo. Por esta razón, es importante no solo prestar atención a la complejidad de los algoritmos, sino también a la "constante" que afecta a esta, ya que este factor puede ser determinante en la práctica.
+Aunque por definición la notación nos dice que $O(10n) = O(n)$ (la constante se elimina), es importante entender que un algoritmo que haga 10 veces más operaciones que otro, requerirá obviamente 10 veces más cómputo. Por esta razón, es importante no solo prestar atención a la complejidad de los algoritmos, sino también a la `constante' que afecta a esta, ya que este factor puede ser determinante en la práctica.
 
 \subsubsection{Importancia en el contexto de este trabajo}
 
@@ -536,96 +539,129 @@ invertir tanta cantidad de tiempo y esfuerzo estudiándolo.
 
 Para abordar las limitaciones de performance del código existente, se utilizaron algoritmos y estructuras de datos eficientes que mantienen la misma o similar funcionalidad pero con un rendimiento superior.
 
-\subsection{Optimización del algoritmo de promedio móvil}
+\subsection{Optimización del algoritmo de remoción de offset con sliding window}
 
-El algoritmo de ventana deslizante (sliding window) es una técnica de optimización utilizada para resolver eficientemente problemas que involucran secuencias contiguas en arreglos. Es particularmente útil cuando se necesita mover una "ventana" de tamaño fijo o dinámico a través de los datos para realizar cálculos o encontrar patrones.
+El algoritmo de ventana deslizante (sliding window) es una técnica de optimización utilizada para resolver eficientemente problemas que involucran secuencias contiguas en arreglos.
 
-En nuestro caso, el problema de calcular el promedio móvil para remover el offset se ajusta perfectamente a esta técnica: necesitamos mantener una ventana de tamaño fijo que se mueve a través de la señal, calculando el promedio en cada punto. En lugar de recalcular la suma completa cada vez que la ventana se mueve (lo que requeriría sumar todos los elementos nuevamente), podemos mantener una suma acumulada que actualizamos incrementalmente.
+En términos generales, la técnica consiste en mover una `ventana' de tamaño fijo a lo largo de la secuencia de datos, realizando operaciones sobre los elementos contenidos en cada posición de la ventana. A medida que la ventana avanza, el valor más antiguo se elimina y el nuevo valor que ingresa se incorpora al cálculo, actualizando así el resultado con un costo computacional que depende solamente de la operacion realizada, y no del tamaño de la ventana.
 
-Si analizamos la implementación \nameref{lst:codigo_promedio_movil}, vemos que el array de datos se recorre una sola vez. En cada iteración, solo se realiza una suma para agregar el nuevo valor a la ventana y una resta para eliminar el valor más antiguo cuando la ventana está completa. De esta manera, la suma total de la ventana se mantiene actualizada de forma incremental, requiriendo solo dos operaciones por iteración independientemente del tamaño de la ventana. El promedio se calcula dividiendo esta suma por el tamaño de la ventana y se resta del punto central. Como resultado, tenemos un algoritmo de complejidad $O(n)$ con una constante muy baja, ya que hacemos una sola division por punto, y dos operaciones para mantener la suma actualizada.
+En la figura \ref{fig:sliding_window_algorithm} se ilustra el funcionamiento para calcular la suma de todos los subarreglos de tamaño 3, mostrando cómo el algoritmo evita recalcular la suma completa en cada desplazamiento de la ventana.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{figures/sliding_window_algorithm.png}
+    \caption{Ejemplo de algoritmo de ventana deslizante para calcular la suma de todos los subarreglos de tamaño 3.}
+    \label{fig:sliding_window_algorithm}
+\end{figure}
+
+Una vez entendido este principio, podemos aplicar la técnica al problema específico de cálculo del promedio móvil utilizado en este trabajo para remover el offset de la señal. En este caso, se mantiene una ventana de tamaño fijo que se desliza a lo largo de la señal, calculando el promedio en cada punto. Dado que la ventana es de tamaño fijo, el promedio es simplemente la suma de la ventana (lo cual se resuelve con la técnica de sliding window) dividida por el tamaño de la ventana.
+
+La implementación del algoritmo optimizado de \nameref{lst:codigo_promedio_movil}, utiliza esta tecnica. Vemos que el arreglo de datos se recorre una sola vez. En cada posición, solo se realiza una suma para agregar el nuevo valor a la ventana y una resta para eliminar el valor más antiguo cuando la ventana está completa.
+
+De esta manera, la suma total de la ventana se mantiene actualizada de forma incremental, requiriendo solo dos operaciones por iteración independientemente del tamaño de la ventana. El promedio se calcula dividiendo esta suma por el tamaño de la ventana y se resta al punto central para corregir el offset de este punto. Como resultado, tenemos un algoritmo de complejidad $O(n)$ con una constante muy baja, ya que hacemos una sola division por punto, y dos operaciones para mantener la suma actualizada.
 
 \begin{lstlisting}[language=C++, label=lst:codigo_promedio_movil, caption={normalizer.cpp - Algoritmo optimizado de ventana deslizante con complejidad O(n)}]
-    double sumSensor1 = 0.0;
-    double sumSensor2 = 0.0;
-    std::vector<double> avgSensor1, avgSensor2;
-    size_t halfWindow = WINDOW_SIZE / 2; // 2500
-    size_t actualWindowSize = halfWindow * 2 + 1; // 5001
+    double sumaSensor1 = 0.0;
+    double sumaSensor2 = 0.0;
+    std::vector<double> normSensor1, normSensor2; // Señales normalizadas
+    int mitadVentana = WINDOW_SIZE / 2; // 2500
+    int tamañoVentana = 2 * mitadVentana + 1; // 5001 (considera el punto central)
 
-    size_t currentSize = 0;
+    int tamañoActual = 0;
 
-    for (size_t i = 0; i < data.size(); ++i) {
-        sumSensor1 += data[i].sensor1;
-        sumSensor2 += data[i].sensor2;
-        ++currentSize;
+    for (int i = 0; i < data.size(); ++i) {
+        // Agregamos el nuevo valor a las sumas
+        sumaSensor1 += data[i].sensor1;
+        sumaSensor2 += data[i].sensor2;
+        ++tamañoActual; // Incrementamos el tamaño de la ventana
 
         // Si nos excedemos del tamaño de la ventana, restamos el valor mas viejo
-        if (currentSize > actualWindowSize) {
-            sumSensor1 -= data[i - actualWindowSize].sensor1;
-            sumSensor2 -= data[i - actualWindowSize].sensor2;
-            --currentSize;
+        if (tamañoActual > tamañoVentana) {
+            sumaSensor1 -= data[i - tamañoVentana].sensor1;
+            sumaSensor2 -= data[i - tamañoVentana].sensor2;
+            --tamañoActual; // Decrementamos el tamaño de la ventana
         }
 
-        if (currentSize == actualWindowSize) {
-            // Hacemos la division al final
-            double meanSensor1 = sumSensor1 / actualWindowSize;
-            double meanSensor2 = sumSensor2 / actualWindowSize;
+        // Si la ventana esta completa, calculamos el promedio
+        if (tamañoActual == tamañoVentana) {
+            // Hacemos la division solo cuando lo necesitamos
+            double promSensor1 = sumaSensor1 / tamañoVentana;
+            double promSensor2 = sumaSensor2 / tamañoVentana;
 
-            avgSensor1.push_back(data[i - halfWindow].sensor1 - meanSensor1);
-            avgSensor2.push_back(data[i - halfWindow].sensor2 - meanSensor2);
+            // Restamos el promedio de la señal al punto central, quitando el offset
+            normSensor1.push_back(data[i - mitadVentana].sensor1 - promSensor1);
+            normSensor2.push_back(data[i - mitadVentana].sensor2 - promSensor2);
         }
     }
 \end{lstlisting}
 
 \subsection{Estructura de datos MinQueue}
 
-Una cola (queue) es una estructura de datos que sigue el principio FIFO (First In, First Out), donde los elementos se agregan por un extremo y se eliminan por el otro. La \textit{MinQueue} extiende este concepto manteniendo una cola auxiliar ordenada para acceder al elemento mínimo en tiempo constante. En lugar de buscar el mínimo en toda la ventana cada vez (operación O(n)), mantiene una estructura auxiliar que permite obtener el mínimo en O(1).
+Para entender la estructura de datos MinQueue, primero debemos entender las colas y las colas doblemente terminadas. Una cola (queue) es una estructura de datos que sigue el principio FIFO (First In, First Out), donde los elementos se agregan por un extremo y se eliminan por el otro. Una cola doblemente terminada (deque) es una estructura de datos que permite insertar y eliminar elementos por ambos extremos. Estas estructuras de datos son muy utiles para modelar situaciones comunes, como la cola del supermercado (ejemplo clasico de una queue) o una escalera mecanica que pueda cambiar de direccion (ejemplo clasico de una deque).
 
-\subsubsection{Principio de funcionamiento}
+La \textit{MinQueue} utiliza estas 2 estructuras internamente, para poder no solo mantener una queue de datos, sino que tambien permite obtener el elemento mínimo en tiempo constante ($O(1)$) en vez de buscar el mínimo en toda la ventana cada vez ($O(n)$).
 
-La MinQueue utiliza una cola principal para almacenar los elementos y una cola auxiliar (deque) para mantener los candidatos al mínimo. La clave del algoritmo radica en mantener la cola auxiliar en orden creciente, para que el primer elemento siempre sea el mínimo actual.
+\subsubsection{Operaciones}
+
+Una queue tiene dos operaciones basicas: \texttt{push} y \texttt{pop}. La primera agrega un elemento al principio de la queue, y la segunda elimina el elemento al final de la queue.
+
+La deque, tiene 2 operaciones extras: \texttt{push\_back} y \texttt{pop\_front}. La primera agrega un elemento al final de la deque, y la segunda elimina el elemento al principio de la deque.
+
+Estas 4 operaciones, se pueden realizar en tiempo constante ($O(1)$).
+
+La MinQueue utiliza una queue principal para almacenar los elementos y una deque para mantener los candidatos al mínimo. Ademas, agrega la operacion \texttt{min} para obtener el elemento mínimo actual. La clave del algoritmo radica en mantener la deque en orden creciente, para que el primer elemento de esta siempre sea el mínimo actual.
+
+En la figura \ref{fig:minqueue_algorithm} se puede observar un ejemplo de funcionamiento de algunas operaciones de la MinQueue. Se debe notar que la queue mantiene los elementos en orden FIFO, y la deque tiene la particularidad de que se elimina el ultimo elemento (derecha) mientras sea mayor al elemento que se esta agregando. Un ejemplo de implementacion de la MinQueue se puede observar en \nameref{lst:minqueue_simple}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{figures/minqueue_algorithm.png}
+    \caption{Ejemplo de funcionamiento de algunas operaciones de la MinQueue.}
+    \label{fig:minqueue_algorithm}
+\end{figure}
 
 \begin{lstlisting}[language=C++, label=lst:minqueue_simple, caption={MaxMinQueue.hpp - Implementación básica de MinQueue con complejidad O(1) amortizado}]
 class MinQueue {
 private:
-    std::queue<int> mainQueue;
-    std::deque<int> minDeque;
+    std::queue<int> queue;
+    std::deque<int> deque;
 
 public:
     void push(int value) {
-        mainQueue.push(value);
+        queue.push(value);
         
         // Mantener el deque en orden creciente
-        while (!minDeque.empty() && minDeque.back() > value) {
-            minDeque.pop_back();
+        while (!deque.empty() && deque.back() > value) {
+            deque.pop_back();
         }
-        minDeque.push_back(value);
+        deque.push_back(value);
     }
     
     int pop() {
-        if (mainQueue.empty()) {
+        if (queue.empty()) {
             throw std::runtime_error("Queue is empty");
         }
         
-        int value = mainQueue.front();
-        mainQueue.pop();
+        int value = queue.front();
+        queue.pop();
         
         // Si el elemento que sacamos es el mínimo actual
-        if (value == minDeque.front()) {
-            minDeque.pop_front();
+        if (value == deque.front()) {
+            deque.pop_front();
         }
         
         return value;
     }
     
     int min() const {
-        if (minDeque.empty()) {
+        if (deque.empty()) {
             throw std::runtime_error("Queue is empty");
         }
-        return minDeque.front();
+        return deque.front();
     }
     
     bool empty() const {
-        return mainQueue.empty();
+        return queue.empty();
     }
 };
 \end{lstlisting}
@@ -646,70 +682,17 @@ public:
 
 Es trivial adaptar la MinQueue para obtener una MaxQueue: simplemente cambiamos la condición de comparación en el bucle while de `$>$' a `$<$', manteniendo el deque auxiliar en orden decreciente en lugar de creciente.
 
-\begin{lstlisting}[language=C++, label=lst:maxqueue_simple, caption={MaxMinQueue.hpp - Adaptación de MinQueue para MaxQueue}]
-void push(int value) {
-    mainQueue.push(value);
-    
-    // Mantener el deque en orden decreciente para máximo
-    while (!maxDeque.empty() && maxDeque.back() < value) {
-        maxDeque.pop_back();
-    }
-    maxDeque.push_back(value);
-}
-\end{lstlisting}
-
 \subsubsection{MaxMinQueue: Manteniendo mínimo y maximo}
 
-Para mantener simultáneamente el mínimo y el máximo, utilizamos dos deques auxiliares independientes: uno para el mínimo (orden decreciente) y otro para el máximo (orden creciente). Esta extensión mantiene la complejidad $O(1)$ amortizado para todas las operaciones, aunque requiere el doble de espacio auxiliar.
+Para mantener simultáneamente el mínimo y el máximo, utilizamos dos deques auxiliares independientes: uno para el mínimo (orden creciente) y otro para el máximo (orden decreciente). Esta extensión mantiene la complejidad $O(1)$ amortizado para todas las operaciones, aunque requiere el doble de espacio auxiliar.
 
-\begin{lstlisting}[language=C++, label=lst:maxminqueue_simple, caption={MaxMinQueue.hpp - Implementación completa de MaxMinQueue con dos deques auxiliares}]
-class MaxMinQueue {
-private:
-    std::queue<int> mainQueue;
-    std::deque<int> minDeque;  // Orden creciente
-    std::deque<int> maxDeque;  // Orden decreciente
+\section{Mejoras aplicadas en el algoritmo}
 
-public:
-    void push(int value) {
-        mainQueue.push(value);
-        
-        // Mantener deque de mínimos
-        while (!minDeque.empty() && minDeque.back() > value) {
-            minDeque.pop_back();
-        }
-        minDeque.push_back(value);
-        
-        // Mantener deque de máximos
-        while (!maxDeque.empty() && maxDeque.back() < value) {
-            maxDeque.pop_back();
-        }
-        maxDeque.push_back(value);
-    }
-    
-    int pop() {
-        int value = mainQueue.front();
-        mainQueue.pop();
-        
-        if (value == minDeque.front()) {
-            minDeque.pop_front();
-        }
-        if (value == maxDeque.front()) {
-            maxDeque.pop_front();
-        }
-        
-        return value;
-    }
-    
-    int min() const { return minDeque.front(); }
-    int max() const { return maxDeque.front(); }
-};
-\end{lstlisting}
-
-\section{Mejoras en el preprocesamiento de señales}
+\subsection{Mejoras en el preprocesamiento de señales}
 
 Se implementaron dos mejoras en el preprocesamiento de señales. La primera es una mejora en el algoritmo de rellenado de huecos, y la segunda es una optimización en el algoritmo de remoción del offset, utilizando un algoritmo de ventana deslizante explicado previamente.
 
-\subsection{Mejora en el algoritmo de rellenado de huecos}
+\subsubsection{Mejora en el algoritmo de rellenado de huecos}
 
 La mejora implementada consiste en utilizar los promedios de los puntos anteriores y posteriores al hueco en vez de valores puntuales para la interpolación. Esta optimización proporciona mejores resultados por las siguientes razones:
 
@@ -721,19 +704,28 @@ La mejora implementada consiste en utilizar los promedios de los puntos anterior
     \item \textbf{Reducción de distorsiones:} Esta mejora minimiza las distorsiones que pueden introducirse durante el rellenado, lo cual es particularmente importante para los pasos posteriores del procesamiento, especialmente en la remoción del offset.
 \end{itemize}
 
-\subsection{Optimización del algoritmo de remoción del offset}
+En la figura \ref{fig:mejora_rellenado_huecos} se puede observar que con el metodo anterior, a la señal se le termina quitando offset "de más", ya que la presencia de valores anomalos en los extremos del hueco afecta el calculo posterior del promedio de las ventanas.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{figures/mejora_rellenado_huecos.png}
+    \caption{Diferencia entre la interpolacion puntual y la interpolacion con promedios de ventanas}
+    \label{fig:mejora_rellenado_huecos}
+\end{figure}
+
+\subsubsection{Optimización del algoritmo de remoción del offset}
 
 En el algoritmo original de remoción de offset implementado en `buscador\_de\_gotas.f', se utilizaba un enfoque ineficiente para calcular el promedio de los 5001 puntos circundantes para cada punto de la señal.
 
 Para optimizarlo, se aplico el algoritmo antes descripto de ventana deslizante para el calculo del promedio, reduciendo significativamente la constante del algoritmo.
 
-\section{Cambios en la detección de pulsos}
+\subsection{Cambios en la detección de pulsos}
 \lhead{}
 \rhead{Cambios en la detección de pulsos}
 
 Se implemento un nuevo algoritmo de deteccion de pulsos en C++, que reemplaza la busqueda con umbrales adaptativos por una busqueda local e iterativa.
 
-\subsection{Algoritmo básico}
+\subsubsection{Algoritmo básico}
 
 El nuevo algoritmo de detección de pulsos se basa en una estrategia de búsqueda local e iterativa que aprovecha el conocimiento previo sobre las características físicas de las gotas. La premisa fundamental es que los pulsos tienen un tamaño máximo fijo de \texttt{DROP\_SIZE = 400} puntos, lo que permite realizar la búsqueda en ventanas de tamaño fijo de \texttt{2 $\times$ DROP\_SIZE = 800} puntos.
 
@@ -758,65 +750,50 @@ Al avanzar la ventana, se permite que hasta los primeros \texttt{nn = 100} punto
 
 Esta estrategia iterativa tiene una gran ventaja en cuanto a la anterior, ya que una vez encontrados los puntos relevantes del pulso, analiza si la gota es valida o no, evitando descartar puntos que no pertenecen a ningun pulso.
 
-\subsection{Detección de puntos críticos}
+\subsubsection{Analisis detallado del algoritmo}
 
-La detección de puntos críticos es el núcleo del algoritmo y se basa en una estrategia de búsqueda iterativa que utiliza la estructura de datos \texttt{MaxMinQueue} para encontrar eficientemente los mejores candidatos.
+\subsubsubsection{Preprocesamiento de señales}
 
-\subsubsection{Preprocesamiento de valores}
+El algoritmo empieza preprocesando los datos de los sensores para calcular un \texttt{value} para cada punto. Para ambos sensores, el \texttt{value} se calcula de la siguiente manera:
 
-Antes de la búsqueda de puntos críticos, el algoritmo preprocesa los datos de los sensores para calcular un \texttt{value} para cada punto. Este valor se calcula de la siguiente manera:
+$$
+\texttt{value[i]} = \min(\texttt{sensor[i]}, \texttt{sensor[i+1]}) \quad \text{para pulsos positivos}
+$$
+$$
+\texttt{value[i]} = \max(\texttt{sensor[i]}, \texttt{sensor[i+1]}) \quad \text{para pulsos negativos}
+$$
 
-\begin{itemize}
-    \item \textbf{Valor del sensor del anillo:} Para cada punto \texttt{i}, se calcula el valor como el mínimo (para pulsos positivos) o máximo (para pulsos negativos) entre los puntos \texttt{i} e \texttt{i+1} del sensor del anillo.
-    
-    \item \textbf{Valor del sensor de la placa:} De manera similar, se calcula el valor correspondiente para el sensor de la placa.
-    
-    \item \textbf{Exclusión de puntos descartados:} Si cualquiera de los puntos \texttt{i} o \texttt{i+1} está marcado como descartado, el valor se establece en 0, excluyendo efectivamente ese punto de la búsqueda.
-\end{itemize}
+Si el punto \texttt{i} o \texttt{i+1} esta marcado como descartado, el \texttt{value} se establece en 0, excluyendo efectivamente ese punto de la búsqueda.
 
-Este paso se puede implementar con una sola iteración sobre la ventana, resultando en una complejidad de $O(n)$, donde $n$ es el tamaño de la ventana.
+Este paso se puede implementar con una sola iteración sobre la señal, resultando en una complejidad de $O(n)$, donde $n$ es el tamaño de la ventana.
 
-\subsubsection{Búsqueda iterativa con MaxMinQueue}
+\subsubsubsection{Búsqueda iterativa con MaxMinQueue}
 
-El algoritmo utiliza una \texttt{MaxMinQueue} para mantener una ventana deslizante de los últimos \texttt{nn = 100} valores del sensor de la placa. La búsqueda se realiza de la siguiente manera:
+Para encontrar los puntos \texttt{c1} y \texttt{c2}, primero buscaremos el `mejor' \texttt{c2} para cada posicion `\texttt{i}' del sensor del anillo.
 
-\begin{itemize}
-    \item \textbf{Inicialización:} Se inicializa una \texttt{MaxMinQueue} vacía y se comienza la búsqueda desde el final de la ventana hacia el inicio.
-    
-    \item \textbf{Actualización de la cola:} En cada iteración, se agrega el \texttt{value} actual del sensor de la placa a la cola. Si la cola excede \texttt{nn} elementos, se elimina el elemento más antiguo.
-    
-    \item \textbf{Obtención del mejor valor:} Para cada posición \texttt{i <\ DROP\_SIZE} del sensor del anillo, se obtiene el mejor valor de la cola (máximo para pulsos positivos, mínimo para pulsos negativos). Con este paso, estamos calculando efectivamente el mejor valor \texttt{c2} para cada \texttt{c1 = i}.
-    
-    \item \textbf{Cálculo del valor combinado:} Se calcula un valor combinado tomando el mínimo (para pulsos positivos) o máximo (para pulsos negativos) entre el valor del sensor del anillo en la posición \texttt{i} y el mejor valor del sensor de la placa de la cola.
-\end{itemize}
+Para esto, utilizamos una MaxMinQueue para mantener el mínimo y máximo de los últimos \texttt{nn}\ \texttt{values} del sensor de la placa, mientras se va recorriendo la señal del anillo desde el final hacia el inicio. De esta manera, para cada `\texttt{i}' sabemos cual es el `mejor' \texttt{c2} y su posicion para el `\texttt{c1 = i}'.
 
-Si analizamos la complejidad de este paso, vemos que es $O(n)$ donde $n$ es el tamaño de la ventana, ya que se realiza una sola iteración sobre la ventana, y mientras se van realizando operaciones de complejidad constante amortizada sobre la MaxMinQueue.
+Al mismo tiempo, podemos mantener el mejor de estos pares de puntos `\texttt{c1}' y `\texttt{c2}', comparando su valor absoluto con el mejor valor absoluto encontrado hasta el momento. De esta manera, al final de la busqueda, tenemos el mejor par de puntos `\texttt{c1}' y `\texttt{c2}' encontrado para esta ventana.
 
-\subsubsection{Selección del mejor candidato}
+Al final, se debe comparar tanto \texttt{c1} como \texttt{c2} con el umbral minimo en valor absoluto (\texttt{MINIMUM\_THRESHOLD = 0.02}) y verificar que sean de la misma polaridad. En caso de que no cumplan alguna de las dos condiciones, no habremos encontrado ningun \texttt{c1} y \texttt{c2} validos para esta ventana, y marcaremos los primeros \texttt{DROP\_SIZE} puntos como utilizados.
 
-El algoritmo mantiene un registro del mejor candidato encontrado hasta el momento:
+Este paso se puede implementar tambien con una sola iteracion sobre la señal, asi que a priori la complejidad es $O(n)$. Las operaciones de MaxMinQueue tienen complejidad constante amortizada, asi que no afectan a la complejidad total.
 
-\begin{itemize}
-    \item \textbf{Criterio de selección:} Se selecciona el candidato con el mayor valor absoluto que supere el umbral mínimo (\texttt{MINIMUM\_THRESHOLD = 0.02}).
-    
-    \item \textbf{Validación de polaridad:} Se verifica que el valor tenga la polaridad correcta (positivo para pulsos positivos, negativo para pulsos negativos).
-    
-    \item \textbf{Actualización del mejor candidato:} Si el candidato actual es mejor que el anterior, se actualiza la información del mejor candidato, incluyendo las posiciones de los puntos críticos \texttt{c1} y \texttt{c2}.
-\end{itemize}
+En caso de que debamos marcar toda la ventana como utilizada, el coste es tambien de complejidad lineal (solo hay que iterar sobre la ventana una vez, marcando cada punto como utilizado).
 
-\subsubsection{Evaluación del mejor candidato}
+\subsubsubsection{Evaluación del mejor par de puntos criticos}
 
-Una vez obtenido el mejor candidato, aplicamos los mismos filtros de calidad que en el algoritmo anterior, y calculamos las propiedades físicas de la gota. Debido a la escasez de pulsos en cuanto a la totalidad de los datos, el tiempo de ejecucion de este paso es despreciable.
+Una vez obtenido el mejor par de puntos criticos, podemos calcular todos los puntos relevantes del pulso, y aplicar los filtros de calidad para decidir si el pulso es valido o no. Si el pulso no es valido, se descartan los puntos criticos encontrados (se marcan como utilizados), y se reinicia la busqueda en la misma ventana.
 
-\subsubsection{Manejo de resultados}
+Si el pulso es valido, se calculan todas las propiedades fisicas de la gota, y se escribe en el archivo de resultados. Luego, se marcan como utilizados todos los puntos del pulso y se reinicia la busqueda en la misma ventana también (esto es importante para poder detectar pulsos múltiples cuando estos son muy cortos).
 
-Si encontramos un pulso valido, lo escribimos en el archivo de resultados, y marcamos como utilizados todos los puntos del pulso.
+Debido a la escasez de pulsos validos con respecto a la totalidad de los datos, el tiempo de ejecucion de este paso es despreciable.
 
-Si encontramos un pulso invalido, se descartan los puntos críticos encontrados (se marcan como utilizados).
+\subsubsubsection{Avance de la ventana}
 
-La ventana no se avanza hasta que, o bien todos los puntos hayan sido utilizados, o bien no se haya encontrado ningun punto critico para algun pulso (esto puede pasar si la señal se encuentra por debajo del umbral minimo). Cuando alguna de estas condiciones se cumpla, la ventana se avanzara como minimo 300 puntos (dado que los primeros 100 puntos permitimos que esten marcados como utilizados). Esto nos da como resultado una cantidad total de ventanas $O(n / 300) = O(n)$, donde $n$ es la cantidad total de puntos en la señal.
+La ventana no se avanza hasta que todos los puntos hayan sido utilizados. Cuando esto ocurra, la ventana se avanzara como minimo 300 puntos (dado que los primeros 100 puntos permitimos que esten marcados como utilizados). Esto nos da como resultado una cantidad total de ventanas $O(n / 300) = O(n)$, donde $n$ es la cantidad total de puntos en la señal.
 
-\subsubsection{Análisis de complejidad}
+\subsubsubsection{Análisis de complejidad}
 
 Habiendo analizado las complejidades de cada componente del algoritmo por separado, podemos determinar la complejidad total del sistema.
 
