feat: start presentation

--- a/escrito/bibliografia.bib
+++ b/escrito/bibliografia.bib
@@ -33,4 +33,30 @@
       edition   = {3rd},
       isbn      = {9780262033848}
     }
+    @book{kleinberg2006algorithm,
+      title     = {Algorithm Design},
+      author    = {Kleinberg, Jon and Tardos, Eva},
+      year      = {2006},
+      publisher = {Pearson}
+    }
+    @book{sedgewick2011algorithms,
+      title     = {Algorithms},
+      author    = {Sedgewick, Robert and Wayne, Kevin},
+      year      = {2011},
+      publisher = {Addison-Wesley},
+      edition   = {4th}
+    }
+    @book{skiena2012algorithm,
+      title     = {The Algorithm Design Manual},
+      author    = {Skiena, Steven S.},
+      year      = {2012},
+      publisher = {Springer},
+      edition   = {2nd}
+    }
+    @book{aho1974design,
+      title     = {The Design and Analysis of Computer Algorithms},
+      author    = {Aho, Alfred V. and Hopcroft, John E. and Ullman, Jeffrey D.},
+      year      = {1974},
+      publisher = {Addison-Wesley}
+    }
     
